[package]
name = "autolog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
litrs = "0.2.3"
proc-macro2 = "1.0.42"
quote = "1.0.20"
syn = { version = "1.0.98", features = ["full"] }
tracing = { version = "0.1.36", optional = true }

[features]
default = ["tracing"]

[dev-dependencies]
# Used to tell whether tracing is enabled or not
parking_lot = "0.12.1"
# Used for async testing
smol = "1.2.5"
# Used to test tracing
tracing-subscriber = "0.3.15"
